--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,71 @@
-*.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+#/.idea/caches
+#/.idea/libraries
+#/.idea/modules.xml
+#/.idea/workspace.xml
+#/.idea/navEditor.xml
+#/.idea/assetWizardSettings.xml
+
+# Created by https://www.gitignore.io/api/java,linux,macos,windows,android,intellij,androidstudio
+# Edit at https://www.gitignore.io/?templates=java,linux,macos,windows,android,intellij,androidstudio
+
+### Android ###
+# Built application files
+*.apk
+*.ap_
+*.aab
+
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
 local.properties
+
+# Android Studio generated files
+.cxx
+
+# Android Studio captures folder
+captures/
+
+# IntelliJ
+*.iml
+.idea/workspace.xml
+#.idea/tasks.xml
+#.idea/gradle.xml
+.idea/assetWizardSettings.xml
+#.idea/dictionaries
+.idea/libraries
+.idea/caches
+
+# External native build folder generated in Android Studio 2.2 and later
+.externalNativeBuild
+
+# User-specific configurations
+#.idea/caches/
+#.idea/libraries/
+#.idea/shelf/
+#.idea/.name
+#.idea/compiler.xml
+#.idea/copyright/profiles_settings.xml
+#.idea/encodings.xml
+#.idea/misc.xml
+.idea/modules.xml
+#.idea/scopes/scope_settings.xml
+#.idea/vcs.xml
+#.idea/jsLibraryMappings.xml
+#.idea/datasources.xml
+#.idea/dataSources.ids
+#.idea/sqlDataSources.xml
+#.idea/dynamic.xml
+#.idea/uiDesigner.xml
+.idea/navEditor.xml
+
+
+# OS-specific files
+.DS_Store
+#.DS_Store?
+#._*
+#.Spotlight-V100
+#.Trashes
+#ehthumbs.db
+#Thumbs.db
