Structure Updated for Recommended Architecture

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,13 +21,13 @@
         <!--        android:value="ca-app-pub-5163472824682213~4420222935"/>-->  <!-- FollowApp MyTasks ID -->
 
         <activity
-            android:name=".TaskDetail"
+            android:name=".detailModule.view.TaskDetail"
             android:exported="false" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".loginModile.view.LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".mainModule.view.TasksActivity"
+            android:name=".mainModule.view.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.MyTasks">
             <intent-filter>
