Fixed detail layout, colors and logo

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ captures/
 #ehthumbs.db
 #Thumbs.db
 /.kotlin/sessions/kotlin-compiler-6312877456234397693.salive
+/.kotlin/sessions/kotlin-compiler-10996938586824258411.salive
