--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,3 @@
-#/.idea/caches
-#/.idea/libraries
-#/.idea/modules.xml
-#/.idea/workspace.xml
-#/.idea/navEditor.xml
-#/.idea/assetWizardSettings.xml
-
-# Created by https://www.gitignore.io/api/java,linux,macos,windows,android,intellij,androidstudio
-# Edit at https://www.gitignore.io/?templates=java,linux,macos,windows,android,intellij,androidstudio
-
 ### Android ###
 # Built application files
 *.apk
@@ -29,45 +19,18 @@ captures/
 
 # IntelliJ
 *.iml
-.idea/workspace.xml
-#.idea/tasks.xml
-#.idea/gradle.xml
-.idea/assetWizardSettings.xml
-#.idea/dictionaries
-.idea/libraries
-.idea/caches
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
-# User-specific configurations
-#.idea/caches/
-#.idea/libraries/
-#.idea/shelf/
-#.idea/.name
-#.idea/compiler.xml
-#.idea/copyright/profiles_settings.xml
-#.idea/encodings.xml
-#.idea/misc.xml
-.idea/modules.xml
-#.idea/scopes/scope_settings.xml
-#.idea/vcs.xml
-#.idea/jsLibraryMappings.xml
-#.idea/datasources.xml
-#.idea/dataSources.ids
-#.idea/sqlDataSources.xml
-#.idea/dynamic.xml
-#.idea/uiDesigner.xml
-.idea/navEditor.xml
-
+## Added by me
+/.idea/*
+/.kotlin/sessions/*
 
 # OS-specific files
 .DS_Store
-#.DS_Store?
-#._*
-#.Spotlight-V100
-#.Trashes
-#ehthumbs.db
-#Thumbs.db
-/.kotlin/sessions/kotlin-compiler-6312877456234397693.salive
-/.kotlin/sessions/kotlin-compiler-10996938586824258411.salive
+
+# User-specific configurations
+/build
+/captures
+/.idea/misc.xml
