--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
             </intent-filter>
         </activity>
 
+        <meta-data android:name="asset_statements" android:resource="@string/asset_statements" />
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="@string/ad_unit_id"/>
