LoginModule with MVVM (#22)
* Ads banner in all views. LoginModule with MVVM scaffold

* Ads banner in all views. LoginModule with MVVM scaffold

* First attempt to Credential Manager

* Troubleshooting LoginFragment.kt

* Troubleshooting Credential Manager a bit more

* Credential Manager working both in the emulator and my mobile!!

* Removing Toats and Logs

* Optimizing LoginFragment.kt

* Further oOptimization of LoginFragment.kt

* Login MVVM not working. Unexpected type of credential

* Login MVVM working.

* Dependency injection using LoginViewModelFactory

* View binding

* try / catch improved

* withContext(Dispatchers.IO)

* Simplifying getGoogleIdToken in the LoginViewModel

* FirebaseService now implemented

* FirebaseService go deeper

* checkPlayServices logic moved to LoginViewModel

* Some more logic moved to LoginRepository

* GooglePlayService implemented

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="com.google.android.gms.permission.AD_ID" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".TaskApplication"
@@ -16,9 +17,6 @@
         android:theme="@style/Theme.MyTasks"
         tools:targetApi="31">
 
-        <activity
-            android:name=".loginModule.view.LoginActivity"
-            android:exported="false" />
         <activity
             android:name=".mainModule.view.MainActivity"
             android:exported="true"
