--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,7 @@ googleGmsGoogleServices = "4.4.2"
 gson = "2.10.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-koinVersion = "4.0.0"
+koin = "4.0.0"
 #lifecycleRuntimeKtx = "2.8.1"
 lifecycleLivedataKtx = "2.8.7"
 material = "1.12.0"
@@ -73,7 +73,10 @@ firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-crashlytics-buildtools = { module = "com.google.firebase:firebase-crashlytics-buildtools", version.ref = "firebaseCrashlyticsBuildtools" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 junit = { module = "junit:junit", version.ref = "junit" }
-koin = { module = "io.insert-koin:koin-android", version.ref = "koinVersion" }
+#koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
+koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+#koin-core = { module = "io.insert-koin:koin-core" }
+
 #kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 play-services-ads = { module = "com.google.android.gms:play-services-ads", version.ref = "playServicesAds" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
